--- a/Library-Persistence/.settings/org.eclipse.jpt.core.prefs
+++ b/Library-Persistence/.settings/org.eclipse.jpt.core.prefs
@@ -1,4 +1,4 @@
-#Tue Feb 22 16:12:32 CET 2011
 eclipse.preferences.version=1
 org.eclipse.jpt.core.discoverAnnotatedClasses=true
-org.eclipse.jpt.core.platform=generic2_0
+org.eclipse.jpt.core.platform=generic2_1
+org.eclipse.jpt.jpa.core.discoverAnnotatedClasses=false
